--- a/content/posts/0128.md
+++ b/content/posts/0128.md
@@ -1,6 +1,7 @@
 ---
 title: 128. Longest Consecutive Sequence
 date: 2021-06-06T18:00:00+08:00
+tags: ["leetcode", "problem", "june challenge 2021"]
 
 ---
 [Leetcode 128. Longest Consecutive Sequence](https://leetcode.com/problems/longest-consecutive-sequence/)
