--- a/content/posts/0746.md
+++ b/content/posts/0746.md
@@ -1,6 +1,7 @@
 ---
 title: 746. Min Cost Climbing Stairs
 date: 2021-06-07T18:00:00+08:00
+tags: ["leetcode", "problem", "june challenge 2021"]
 
 ---
 [Leetcode 746. Min Cost Climbing Stairs](https://leetcode.com/problems/min-cost-climbing-stairs/)
