--- a/content/posts/1383.md
+++ b/content/posts/1383.md
@@ -1,6 +1,7 @@
 ---
 title: 1383. Maximum Performance of a Team
 date: 2021-06-05T18:00:00+08:00
+tags: ["leetcode", "problem", "june challenge 2021"]
 
 ---
 [Leetcode 1383. Maximum Performance of a Team](https://leetcode.com/problems/maximum-performance-of-a-team/)
