--- a/content/posts/1696.md
+++ b/content/posts/1696.md
@@ -1,6 +1,7 @@
 ---
 title: 1696. Jump Game VI
 date: 2021-06-09T18:00:00+08:00
+tags: ["leetcode", "problem", "june challenge 2021"]
 
 ---
 [Leetcode 1696. Jump Game VI](https://leetcode.com/problems/jump-game-vi/)
