--- a/content/posts/0105.md
+++ b/content/posts/0105.md
@@ -1,6 +1,7 @@
 ---
 title: 105. Construct Binary Tree from Preorder and Inorder Traversal
 date: 2021-06-08T18:00:00+08:00
+tags: ["leetcode", "problem", "june challenge 2021"]
 
 ---
 [Leetcode 105. Construct Binary Tree from Preorder and Inorder Traversal](https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
