--- a/content/posts/0695.md
+++ b/content/posts/0695.md
@@ -1,6 +1,7 @@
 ---
 title: 695. Max Area of Island
 date: 2021-06-01T18:00:00+08:00
+tags: ["leetcode", "problem", "june challenge 2021"]
 
 ---
 [Leetcode 695. Max Area of Island](https://leetcode.com/problems/max-area-of-island/)
