--- a/content/posts/0752.md
+++ b/content/posts/0752.md
@@ -1,6 +1,7 @@
 ---
 title: 752. Open the Lock
 date: 2021-06-04T18:00:00+08:00
+tags: ["leetcode", "problem", "june challenge 2021"]
 
 ---
 [Leetcode 752. Open the Lock](https://leetcode.com/problems/open-the-lock/)
