--- a/content/posts/1465.md
+++ b/content/posts/1465.md
@@ -1,6 +1,7 @@
 ---
 title: 1465. Maximum Area of a Piece of Cake After Horizontal and Vertical Cuts
 date: 2021-06-03T18:00:00+08:00
+tags: ["leetcode", "problem", "june challenge 2021"]
 
 ---
 [Leetcode 1465. Maximum Area of a Piece of Cake After Horizontal and Vertical Cuts](https://leetcode.com/problems/maximum-area-of-a-piece-of-cake-after-horizontal-and-vertical-cuts/)
