--- a/content/posts/1696.md
+++ b/content/posts/1696.md
@@ -22,13 +22,13 @@ Return the maximum score you can get.
 
 所以，我們要對 DP 更新的方式做一些改變。
 
-我們多拿一個 queue 來儲存位置需要處裡的位置。
+我們多拿一個陣列當成 deque 來儲存位置需要處裡的位置。
 
-這個 queue 有個特色，就是他是單調嚴格遞增的。
+這個 deque 有個特色，就是他是單調嚴格遞增的。
 
 遍歷的時候，先把其中已經不在可抵達範圍內的拿掉。
 
-該位置的 DP 值就會是 queue 最前面位置的最大分數加上該位置的分數。
+該位置的 DP 值就會是 deque 最前面位置的最大分數加上該位置的分數。
 
 你可能會想說，為什麼最前面位置的最大分數會最佳呢？
 
@@ -44,26 +44,26 @@ var maxResult = function (nums, k) {
 
   // dp 陣列用來存到 i 處最大分數
   let dp = new Array(n);
-  // queue 用來存候選位置
-  let queue = [];
+  // deque 用來存候選位置
+  let deque = [];
 
   // 初始化，分別放入 i = 0 的值與位置
   dp[0] = nums[0];
-  queue.push(0);
+  deque.push(0);
 
   // 遍歷 nums
   for (let i = 1; i < n; i++) {
-    // 把 queue 中超過可到達範圍的位置移除
-    while (queue.length && queue[0] < i - k) queue.shift();
+    // 把 deque 中超過可到達範圍的位置移除
+    while (deque.length && deque[0] < i - k) deque.shift();
 
-    // i 位置的最大分數會是 queue 中離 i 最遠的最大分數加上 i 位置的分數
-    dp[i] = dp[queue[0]] + nums[i];
+    // i 位置的最大分數會是 deque 中離 i 最遠的最大分數加上 i 位置的分數
+    dp[i] = dp[deque[0]] + nums[i];
 
-    // 把 queue 中位置的最大分數比 i 位置的最大分數小的位置移除
-    while (queue.length && dp[i] >= dp[queue[queue.length - 1]]) queue.pop();
+    // 把 deque 中位置的最大分數比 i 位置的最大分數小的位置移除
+    while (deque.length && dp[i] >= dp[deque[deque.length - 1]]) deque.pop();
 
-    // 把 i 位置放入 queue
-    queue.push(i);
+    // 把 i 位置放入 deque
+    deque.push(i);
   }
 
   // 回傳到最後一個位置的最大分數
