--- a/content/posts/1696.md
+++ b/content/posts/1696.md
@@ -53,8 +53,8 @@ var maxResult = function (nums, k) {
 
   // 遍歷 nums
   for (let i = 1; i < n; i++) {
-    // 把 deque 中超過可到達範圍的位置移除
-    while (deque.length && deque[0] < i - k) deque.shift();
+    // 如果 deque 最前面那個超過可到達範圍，把它移除
+    if (deque.length && deque[0] < i - k) deque.shift();
 
     // i 位置的最大分數會是 deque 中離 i 最遠的最大分數加上 i 位置的分數
     dp[i] = dp[deque[0]] + nums[i];
